--- a/IPSJ_Mooc_2_1.ipynb
+++ b/IPSJ_Mooc_2_1.ipynb
@@ -70,14 +70,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DlOZ3u3v5UzD"
+        "id": "DlOZ3u3v5UzD",
+        "outputId": "c2e9e8a9-fa29-47e1-93da-d592effdc866",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "names = ['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n",
         "print(names)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -119,20 +131,33 @@
       "source": [
         "sorted_names = sorted(names)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "me7m35NOIl36"
+        "id": "me7m35NOIl36",
+        "outputId": "03fb0517-01da-45c0-c444-78bf58de3b99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print(names)\n",
         "print(sorted_names)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n",
+            "['あい', 'あおい', 'あん', 'かいと', 'さくら', 'しょうた', 'そら', 'だいき', 'つばさ', 'ななみ', 'ひな', 'ひろと', 'まお', 'みう', 'みさき', 'ゆい', 'ゆう', 'ゆうと', 'りく', 'れん']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -147,7 +172,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BUkokyVtwI0L"
+        "id": "BUkokyVtwI0L",
+        "outputId": "260be7a8-20a0-42c9-eb44-9dd1e3b5b4e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sorted_names_r = sorted(names,reverse=True)\n",
@@ -155,8 +184,18 @@
         "print(sorted_names)\n",
         "print(sorted_names_r)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n",
+            "['あい', 'あおい', 'あん', 'かいと', 'さくら', 'しょうた', 'そら', 'だいき', 'つばさ', 'ななみ', 'ひな', 'ひろと', 'まお', 'みう', 'みさき', 'ゆい', 'ゆう', 'ゆうと', 'りく', 'れん']\n",
+            "['れん', 'りく', 'ゆうと', 'ゆう', 'ゆい', 'みさき', 'みう', 'まお', 'ひろと', 'ひな', 'ななみ', 'つばさ', 'だいき', 'そら', 'しょうた', 'さくら', 'かいと', 'あん', 'あおい', 'あい']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -172,14 +211,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fRAhSbgQfcy0"
+        "id": "fRAhSbgQfcy0",
+        "outputId": "96fc99d6-dc81-4c7b-eb27-bea6e0fe6df8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print('たろう' in names)\n",
         "print('ひな' in names)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -195,14 +247,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FGqfILA15SCf"
+        "id": "FGqfILA15SCf",
+        "outputId": "c800a2ba-9350-4e4a-ed49-06c0dc24e041",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print(names.index('ひな'))\n",
         "print(sorted_names.index('ひな'))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -218,15 +283,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LzuDA9KGggI6"
+        "id": "LzuDA9KGggI6",
+        "outputId": "000fe528-7fa0-4339-a829-bcbad96d24a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print(names)\n",
         "names.append('たろう')\n",
         "print(names)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n",
+            "['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう', 'たろう']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -242,14 +320,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GMgxf8Dm8pHa"
+        "id": "GMgxf8Dm8pHa",
+        "outputId": "570bc89b-5e76-437b-c274-4c255f1ee979",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print(sorted_names)\n",
         "sorted_names.insert(8,'たろう')\n",
         "print(sorted_names)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['あい', 'あおい', 'あん', 'かいと', 'さくら', 'しょうた', 'そら', 'だいき', 'つばさ', 'ななみ', 'ひな', 'ひろと', 'まお', 'みう', 'みさき', 'ゆい', 'ゆう', 'ゆうと', 'りく', 'れん']\n",
+            "['あい', 'あおい', 'あん', 'かいと', 'さくら', 'しょうた', 'そら', 'だいき', 'たろう', 'つばさ', 'ななみ', 'ひな', 'ひろと', 'まお', 'みう', 'みさき', 'ゆい', 'ゆう', 'ゆうと', 'りく', 'れん']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MkNPC16PQCG1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 19,
       "outputs": []
     }
   ]
