Colaboratory を使用して作成しました

--- a/IPSJ_Mooc_2_2_1.ipynb
+++ b/IPSJ_Mooc_2_2_1.ipynb
@@ -90,9 +90,10 @@
       "source": [
         "def l_search(a,p):\n",
         "  # ここにコードを書いて完成させましょう\n",
+        "  for i in range(len(a)):\n",
+        "    if a[i] == p:\n",
+        "      return(i)\n",
         "\n",
-        "\n",
-        "  \n",
         "  return(-1)           # 探索失敗"
       ],
       "execution_count": null,
@@ -110,7 +111,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hu9bFhw3B9dW"
+        "id": "hu9bFhw3B9dW",
+        "outputId": "1c651a1e-fdb8-42ea-d04b-43480fe00e08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "names = ['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n",
@@ -136,8 +141,29 @@
         "print('未ソート',p,l_search(names,p))\n",
         "print('ソート済',p,l_search(sorted_names,p))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n",
+            "['あい', 'あおい', 'あん', 'かいと', 'さくら', 'しょうた', 'そら', 'だいき', 'つばさ', 'ななみ', 'ひな', 'ひろと', 'まお', 'みう', 'みさき', 'ゆい', 'ゆう', 'ゆうと', 'りく', 'れん']\n",
+            "未ソート つばさ 10\n",
+            "ソート済 つばさ 8\n",
+            "未ソート たろう -1\n",
+            "ソート済 たろう -1\n",
+            "未ソート ゆうと 0\n",
+            "ソート済 ゆうと 17\n",
+            "未ソート あい 6\n",
+            "ソート済 あい 0\n",
+            "未ソート ゆう 19\n",
+            "ソート済 ゆう 16\n",
+            "未ソート れん 7\n",
+            "ソート済 れん 19\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
