Colaboratory を使用して作成しました

--- a/IPSJ_Mooc_2_2_2.ipynb
+++ b/IPSJ_Mooc_2_2_2.ipynb
@@ -152,14 +152,20 @@
       "source": [
         "def b_search(a,p):\n",
         "  # ここに二分探索の処理を  \n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "  left = 0\n",
+        "  right = len(a)-1\n",
+        "  while left < right:\n",
+        "    middle = (left+right)//2\n",
+        "    if a[middle] < p:\n",
+        "      left = middle +1\n",
+        "    elif a[middle] > p:\n",
+        "      right = middle\n",
+        "    elif a[middle] == p:\n",
+        "      return middle\n",
         "\n",
         "  return(-1)      # 探索失敗"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -174,7 +180,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SIG-GRzonH3W"
+        "id": "SIG-GRzonH3W",
+        "outputId": "fbfe6f20-e0e2-4059-bcd7-22632ddc00bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "p = 'つばさ'\n",
@@ -190,13 +200,30 @@
         "p = 'れん'\n",
         "print('ソート済',p,b_search(sorted_names,p))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ソート済 つばさ 8\n",
+            "ソート済 たろう -1\n",
+            "ソート済 ゆうと 17\n",
+            "ソート済 あい 0\n",
+            "ソート済 ゆう 16\n",
+            "ソート済 れん -1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y6angaNMnSNL"
+        "id": "Y6angaNMnSNL",
+        "outputId": "4cc69e07-3d62-480f-e914-fb0f760aaa37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sorted_nums = [6, 8, 18, 26, 39, 44, 63, 66, 68, 76, 78, 79, 80, 85, 87]\n",
@@ -209,8 +236,19 @@
         "p = 77\n",
         "print('ソート済',p,b_search(sorted_nums,p))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ソート済 26 3\n",
+            "ソート済 66 7\n",
+            "ソート済 79 11\n",
+            "ソート済 77 -1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
