Colaboratory を使用して作成しました

--- a/IPSJ_Mooc_2_2_3.ipynb
+++ b/IPSJ_Mooc_2_2_3.ipynb
@@ -88,7 +88,7 @@
         "      l = m+1\n",
         "  return(-1)      # 探索失敗"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -103,7 +103,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Cvi29lEySe3S"
+        "id": "Cvi29lEySe3S",
+        "outputId": "3e1f508d-81b6-4039-f247-6e0d0249b31e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "names = ['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n",
@@ -111,13 +115,26 @@
         "print(names)\n",
         "print(sorted_names)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ゆうと', 'ひな', 'さくら', 'ゆい', 'あん', 'りく', 'あい', 'れん', 'ひろと', 'あおい', 'つばさ', 'だいき', 'ななみ', 'まお', 'かいと', 'みう', 'そら', 'みさき', 'しょうた', 'ゆう']\n",
+            "['あい', 'あおい', 'あん', 'かいと', 'さくら', 'しょうた', 'そら', 'だいき', 'つばさ', 'ななみ', 'ひな', 'ひろと', 'まお', 'みう', 'みさき', 'ゆい', 'ゆう', 'ゆうと', 'りく', 'れん']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SIG-GRzonH3W"
+        "id": "SIG-GRzonH3W",
+        "outputId": "5043bed1-b52e-400a-ef3a-19350c8e7170",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "p = 'つばさ'\n",
@@ -133,13 +150,30 @@
         "p = 'れん'\n",
         "print('ソート済',p,b_search(sorted_names,p))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ソート済 つばさ 8\n",
+            "ソート済 たろう -1\n",
+            "ソート済 ゆうと 17\n",
+            "ソート済 あい 0\n",
+            "ソート済 ゆう 16\n",
+            "ソート済 れん 19\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y6angaNMnSNL"
+        "id": "Y6angaNMnSNL",
+        "outputId": "cff1ea3f-47a9-4ba9-a2ad-22120a6d6a1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sorted_nums = [6, 8, 18, 26, 39, 44, 63, 66, 68, 76, 78, 79, 80, 85, 87]\n",
@@ -152,8 +186,19 @@
         "p = 77\n",
         "print('ソート済',p,b_search(sorted_nums,p))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ソート済 26 3\n",
+            "ソート済 66 7\n",
+            "ソート済 79 11\n",
+            "ソート済 77 -1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -199,7 +244,7 @@
         "      l = m+1\n",
         "  return(-1)      # 探索失敗"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -216,7 +261,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qvA3pWTaRy4v"
+        "id": "qvA3pWTaRy4v",
+        "outputId": "0c9a891a-ed42-46fc-8bab-1b3bb1f762d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import random\n",
@@ -245,8 +294,100 @@
         "print(\"線形探索（ソート済）探索回数平均:\", c2/len(names))\n",
         "print(\"二分探索 探索回数平均:\", c3/len(names))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['あい', 'あおい', 'あん', 'かいと', 'さくら', 'しょうた', 'そら', 'だいき', 'つばさ', 'ななみ', 'ひな', 'ひろと', 'まお', 'みう', 'みさき', 'ゆい', 'ゆう', 'ゆうと', 'りく', 'れん']\n",
+            "['みさき', 'あい', 'ひろと', 'まお', 'しょうた', 'だいき', 'あん', 'つばさ', 'みう', 'そら', 'さくら', 'ななみ', 'ゆう', 'あおい', 'ひな', 'ゆうと', 'かいと', 'ゆい', 'れん', 'りく']\n",
+            "あい\n",
+            " [線形探索（非ソート）] 場所:  1 , 探索回数:  2\n",
+            " [線形探索（ソート済）] 場所:  0 , 探索回数:  1\n",
+            " [二分探索] 場所:  0 , 探索回数:  4\n",
+            "あおい\n",
+            " [線形探索（非ソート）] 場所:  13 , 探索回数:  14\n",
+            " [線形探索（ソート済）] 場所:  1 , 探索回数:  2\n",
+            " [二分探索] 場所:  1 , 探索回数:  3\n",
+            "あん\n",
+            " [線形探索（非ソート）] 場所:  6 , 探索回数:  7\n",
+            " [線形探索（ソート済）] 場所:  2 , 探索回数:  3\n",
+            " [二分探索] 場所:  2 , 探索回数:  4\n",
+            "かいと\n",
+            " [線形探索（非ソート）] 場所:  16 , 探索回数:  17\n",
+            " [線形探索（ソート済）] 場所:  3 , 探索回数:  4\n",
+            " [二分探索] 場所:  3 , 探索回数:  5\n",
+            "さくら\n",
+            " [線形探索（非ソート）] 場所:  10 , 探索回数:  11\n",
+            " [線形探索（ソート済）] 場所:  4 , 探索回数:  5\n",
+            " [二分探索] 場所:  4 , 探索回数:  2\n",
+            "しょうた\n",
+            " [線形探索（非ソート）] 場所:  4 , 探索回数:  5\n",
+            " [線形探索（ソート済）] 場所:  5 , 探索回数:  6\n",
+            " [二分探索] 場所:  5 , 探索回数:  4\n",
+            "そら\n",
+            " [線形探索（非ソート）] 場所:  9 , 探索回数:  10\n",
+            " [線形探索（ソート済）] 場所:  6 , 探索回数:  7\n",
+            " [二分探索] 場所:  6 , 探索回数:  3\n",
+            "だいき\n",
+            " [線形探索（非ソート）] 場所:  5 , 探索回数:  6\n",
+            " [線形探索（ソート済）] 場所:  7 , 探索回数:  8\n",
+            " [二分探索] 場所:  7 , 探索回数:  4\n",
+            "つばさ\n",
+            " [線形探索（非ソート）] 場所:  7 , 探索回数:  8\n",
+            " [線形探索（ソート済）] 場所:  8 , 探索回数:  9\n",
+            " [二分探索] 場所:  8 , 探索回数:  5\n",
+            "ななみ\n",
+            " [線形探索（非ソート）] 場所:  11 , 探索回数:  12\n",
+            " [線形探索（ソート済）] 場所:  9 , 探索回数:  10\n",
+            " [二分探索] 場所:  9 , 探索回数:  1\n",
+            "ひな\n",
+            " [線形探索（非ソート）] 場所:  14 , 探索回数:  15\n",
+            " [線形探索（ソート済）] 場所:  10 , 探索回数:  11\n",
+            " [二分探索] 場所:  10 , 探索回数:  4\n",
+            "ひろと\n",
+            " [線形探索（非ソート）] 場所:  2 , 探索回数:  3\n",
+            " [線形探索（ソート済）] 場所:  11 , 探索回数:  12\n",
+            " [二分探索] 場所:  11 , 探索回数:  3\n",
+            "まお\n",
+            " [線形探索（非ソート）] 場所:  3 , 探索回数:  4\n",
+            " [線形探索（ソート済）] 場所:  12 , 探索回数:  13\n",
+            " [二分探索] 場所:  12 , 探索回数:  4\n",
+            "みう\n",
+            " [線形探索（非ソート）] 場所:  8 , 探索回数:  9\n",
+            " [線形探索（ソート済）] 場所:  13 , 探索回数:  14\n",
+            " [二分探索] 場所:  13 , 探索回数:  5\n",
+            "みさき\n",
+            " [線形探索（非ソート）] 場所:  0 , 探索回数:  1\n",
+            " [線形探索（ソート済）] 場所:  14 , 探索回数:  15\n",
+            " [二分探索] 場所:  14 , 探索回数:  2\n",
+            "ゆい\n",
+            " [線形探索（非ソート）] 場所:  17 , 探索回数:  18\n",
+            " [線形探索（ソート済）] 場所:  15 , 探索回数:  16\n",
+            " [二分探索] 場所:  15 , 探索回数:  4\n",
+            "ゆう\n",
+            " [線形探索（非ソート）] 場所:  12 , 探索回数:  13\n",
+            " [線形探索（ソート済）] 場所:  16 , 探索回数:  17\n",
+            " [二分探索] 場所:  16 , 探索回数:  5\n",
+            "ゆうと\n",
+            " [線形探索（非ソート）] 場所:  15 , 探索回数:  16\n",
+            " [線形探索（ソート済）] 場所:  17 , 探索回数:  18\n",
+            " [二分探索] 場所:  17 , 探索回数:  3\n",
+            "りく\n",
+            " [線形探索（非ソート）] 場所:  19 , 探索回数:  20\n",
+            " [線形探索（ソート済）] 場所:  18 , 探索回数:  19\n",
+            " [二分探索] 場所:  18 , 探索回数:  4\n",
+            "れん\n",
+            " [線形探索（非ソート）] 場所:  18 , 探索回数:  19\n",
+            " [線形探索（ソート済）] 場所:  19 , 探索回数:  20\n",
+            " [二分探索] 場所:  19 , 探索回数:  5\n",
+            "線形探索（非ソート）探索回数平均: 10.5\n",
+            "線形探索（ソート済）探索回数平均: 10.5\n",
+            "二分探索 探索回数平均: 3.7\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -260,7 +401,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EYWHwUWSSYje"
+        "id": "EYWHwUWSSYje",
+        "outputId": "942bc60a-953d-42de-e536-3d69e916dff4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sorted_nums = [61, 79, 92, 98, 128, 163, 225, 354, 395, 398, 420, 500, 543, 545, 570, 603, 604, 684, 696, 708, 711, 720, 731, 784, 878, 882, 884, 900, 930, 958, 999]\n",
@@ -279,8 +424,110 @@
         "print(\"線形探索（ソート済）探索回数平均:\", c2/len(sorted_nums))\n",
         "print(\"二分探索 探索回数平均:\", c3/len(sorted_nums))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "61\n",
+            " [線形探索（ソート済）] 場所:  0 , 探索回数:  1\n",
+            " [二分探索] 場所:  0 , 探索回数:  5\n",
+            "79\n",
+            " [線形探索（ソート済）] 場所:  1 , 探索回数:  2\n",
+            " [二分探索] 場所:  1 , 探索回数:  4\n",
+            "92\n",
+            " [線形探索（ソート済）] 場所:  2 , 探索回数:  3\n",
+            " [二分探索] 場所:  2 , 探索回数:  5\n",
+            "98\n",
+            " [線形探索（ソート済）] 場所:  3 , 探索回数:  4\n",
+            " [二分探索] 場所:  3 , 探索回数:  3\n",
+            "128\n",
+            " [線形探索（ソート済）] 場所:  4 , 探索回数:  5\n",
+            " [二分探索] 場所:  4 , 探索回数:  5\n",
+            "163\n",
+            " [線形探索（ソート済）] 場所:  5 , 探索回数:  6\n",
+            " [二分探索] 場所:  5 , 探索回数:  4\n",
+            "225\n",
+            " [線形探索（ソート済）] 場所:  6 , 探索回数:  7\n",
+            " [二分探索] 場所:  6 , 探索回数:  5\n",
+            "354\n",
+            " [線形探索（ソート済）] 場所:  7 , 探索回数:  8\n",
+            " [二分探索] 場所:  7 , 探索回数:  2\n",
+            "395\n",
+            " [線形探索（ソート済）] 場所:  8 , 探索回数:  9\n",
+            " [二分探索] 場所:  8 , 探索回数:  5\n",
+            "398\n",
+            " [線形探索（ソート済）] 場所:  9 , 探索回数:  10\n",
+            " [二分探索] 場所:  9 , 探索回数:  4\n",
+            "420\n",
+            " [線形探索（ソート済）] 場所:  10 , 探索回数:  11\n",
+            " [二分探索] 場所:  10 , 探索回数:  5\n",
+            "500\n",
+            " [線形探索（ソート済）] 場所:  11 , 探索回数:  12\n",
+            " [二分探索] 場所:  11 , 探索回数:  3\n",
+            "543\n",
+            " [線形探索（ソート済）] 場所:  12 , 探索回数:  13\n",
+            " [二分探索] 場所:  12 , 探索回数:  5\n",
+            "545\n",
+            " [線形探索（ソート済）] 場所:  13 , 探索回数:  14\n",
+            " [二分探索] 場所:  13 , 探索回数:  4\n",
+            "570\n",
+            " [線形探索（ソート済）] 場所:  14 , 探索回数:  15\n",
+            " [二分探索] 場所:  14 , 探索回数:  5\n",
+            "603\n",
+            " [線形探索（ソート済）] 場所:  15 , 探索回数:  16\n",
+            " [二分探索] 場所:  15 , 探索回数:  1\n",
+            "604\n",
+            " [線形探索（ソート済）] 場所:  16 , 探索回数:  17\n",
+            " [二分探索] 場所:  16 , 探索回数:  5\n",
+            "684\n",
+            " [線形探索（ソート済）] 場所:  17 , 探索回数:  18\n",
+            " [二分探索] 場所:  17 , 探索回数:  4\n",
+            "696\n",
+            " [線形探索（ソート済）] 場所:  18 , 探索回数:  19\n",
+            " [二分探索] 場所:  18 , 探索回数:  5\n",
+            "708\n",
+            " [線形探索（ソート済）] 場所:  19 , 探索回数:  20\n",
+            " [二分探索] 場所:  19 , 探索回数:  3\n",
+            "711\n",
+            " [線形探索（ソート済）] 場所:  20 , 探索回数:  21\n",
+            " [二分探索] 場所:  20 , 探索回数:  5\n",
+            "720\n",
+            " [線形探索（ソート済）] 場所:  21 , 探索回数:  22\n",
+            " [二分探索] 場所:  21 , 探索回数:  4\n",
+            "731\n",
+            " [線形探索（ソート済）] 場所:  22 , 探索回数:  23\n",
+            " [二分探索] 場所:  22 , 探索回数:  5\n",
+            "784\n",
+            " [線形探索（ソート済）] 場所:  23 , 探索回数:  24\n",
+            " [二分探索] 場所:  23 , 探索回数:  2\n",
+            "878\n",
+            " [線形探索（ソート済）] 場所:  24 , 探索回数:  25\n",
+            " [二分探索] 場所:  24 , 探索回数:  5\n",
+            "882\n",
+            " [線形探索（ソート済）] 場所:  25 , 探索回数:  26\n",
+            " [二分探索] 場所:  25 , 探索回数:  4\n",
+            "884\n",
+            " [線形探索（ソート済）] 場所:  26 , 探索回数:  27\n",
+            " [二分探索] 場所:  26 , 探索回数:  5\n",
+            "900\n",
+            " [線形探索（ソート済）] 場所:  27 , 探索回数:  28\n",
+            " [二分探索] 場所:  27 , 探索回数:  3\n",
+            "930\n",
+            " [線形探索（ソート済）] 場所:  28 , 探索回数:  29\n",
+            " [二分探索] 場所:  28 , 探索回数:  5\n",
+            "958\n",
+            " [線形探索（ソート済）] 場所:  29 , 探索回数:  30\n",
+            " [二分探索] 場所:  29 , 探索回数:  4\n",
+            "999\n",
+            " [線形探索（ソート済）] 場所:  30 , 探索回数:  31\n",
+            " [二分探索] 場所:  30 , 探索回数:  5\n",
+            "線形探索（ソート済）探索回数平均: 16.0\n",
+            "二分探索 探索回数平均: 4.161290322580645\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -296,7 +543,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VNtjmQgYY6jQ"
+        "id": "VNtjmQgYY6jQ",
+        "outputId": "2804db9b-2ac3-4a7a-8ceb-44608be12963",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sorted_nums = list(range(10000))\n",
@@ -315,8 +566,17 @@
         "print(\"線形探索（ソート済）探索回数平均:\", c2/len(sorted_nums))\n",
         "print(\"二分探索 探索回数平均:\", c3/len(sorted_nums))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "線形探索（ソート済）探索回数平均: 5000.5\n",
+            "二分探索 探索回数平均: 12.3631\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -326,6 +586,63 @@
       "source": [
         "演習）線形探索と二分探索を比較する際，探索回数の合計・平均だけではなく最大値も算出して比較してみましょう。"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uZIjOFJAaXB4",
+        "outputId": "c3826c06-5882-49b0-fcda-fdee460b7947",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "sorted_nums = list(range(10000))\n",
+        "c2 = 0\n",
+        "c3 = 0\n",
+        "c2_max = 0\n",
+        "c3_max = 0\n",
+        "for num in sorted_nums:\n",
+        "  # print(num)\n",
+        "  count = 0\n",
+        "  sol = l_search_count(sorted_nums,num)\n",
+        "  c2 += count\n",
+        "  c2_max = max(c2_max,count)\n",
+        "  # print(\" [線形探索（ソート済）] 場所: \", sol, \", 探索回数: \", count)\n",
+        "  count = 0\n",
+        "  sol = b_search_count(sorted_nums,num)\n",
+        "  c3 += count\n",
+        "  c3_max = max(c3_max,count)\n",
+        "  # print(\" [二分探索] 場所: \", sol, \", 探索回数: \", count)\n",
+        "print(\"線形探索（ソート済）探索回数平均:\", c2/len(sorted_nums))\n",
+        "print(\"二分探索 探索回数平均:\", c3/len(sorted_nums))\n",
+        "print(\"線形探索（ソート済）探索回数最大値:\", c2_max)\n",
+        "print(\"二分探索 探索回数平均最大値:\", c3_max)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "線形探索（ソート済）探索回数平均: 5000.5\n",
+            "二分探索 探索回数平均: 12.3631\n",
+            "線形探索（ソート済）探索回数最大値: 10000\n",
+            "二分探索 探索回数平均最大値: 14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TWLvQupibQ0I"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
