Colaboratory を使用して作成しました

--- a/IPSJ_Mooc_2_4_2.ipynb
+++ b/IPSJ_Mooc_2_4_2.ipynb
@@ -128,7 +128,7 @@
         "    min_i = min_index_count(a,i)\n",
         "    a[i], a[min_i] = a[min_i], a[i]"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
         "  quick_sort_count(a, start, l - 1)\n",
         "  quick_sort_count(a, l + 1, end)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -220,7 +220,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iWBLskIWeky9"
+        "id": "iWBLskIWeky9",
+        "outputId": "5d5b22ef-1678-4ed6-9ce4-1d725575ebfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import random\n",
@@ -247,8 +251,47 @@
         "print('選択ソート（最大，平均） ', max1, c1/t)\n",
         "print('クイックソート（最大，平均） ', max2, c2/t)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 [4, 66, 1, 44, 90, 97, 80, 8, 18, 6, 95, 78, 87, 76, 85, 89, 68, 26, 79, 92, 98, 19, 5, 63, 39]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 92\n",
+            "1 [90, 39, 97, 89, 6, 18, 76, 5, 63, 68, 95, 66, 78, 44, 26, 92, 1, 85, 19, 80, 98, 8, 87, 79, 4]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 100\n",
+            "2 [66, 85, 90, 92, 44, 97, 95, 26, 1, 98, 18, 63, 76, 68, 6, 87, 5, 8, 4, 79, 19, 78, 89, 39, 80]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 101\n",
+            "3 [80, 76, 63, 68, 5, 26, 6, 87, 90, 78, 44, 19, 97, 39, 8, 95, 92, 1, 98, 79, 66, 89, 85, 18, 4]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 105\n",
+            "4 [1, 95, 39, 26, 78, 44, 92, 80, 90, 66, 63, 4, 6, 19, 8, 76, 87, 5, 68, 97, 18, 79, 85, 89, 98]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 113\n",
+            "5 [44, 26, 4, 19, 39, 66, 78, 90, 8, 18, 6, 95, 98, 85, 1, 87, 5, 79, 68, 89, 80, 92, 97, 76, 63]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 125\n",
+            "6 [4, 68, 63, 26, 78, 87, 44, 89, 76, 90, 66, 85, 79, 39, 97, 8, 1, 18, 5, 95, 98, 80, 6, 92, 19]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 95\n",
+            "7 [26, 39, 4, 68, 85, 8, 89, 19, 90, 97, 5, 80, 18, 78, 92, 95, 76, 79, 6, 87, 66, 98, 44, 63, 1]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 112\n",
+            "8 [26, 8, 66, 5, 87, 80, 90, 39, 44, 1, 79, 98, 6, 89, 92, 19, 18, 97, 95, 76, 4, 68, 63, 85, 78]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 108\n",
+            "9 [1, 95, 8, 89, 6, 44, 4, 68, 87, 79, 63, 92, 66, 76, 78, 80, 98, 19, 97, 5, 18, 26, 85, 39, 90]\n",
+            "　　選択ソート 比較回数 300\n",
+            "　　クイックソート 比較回数 114\n",
+            "選択ソート（最大，平均）  300 300.0\n",
+            "クイックソート（最大，平均）  125 106.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -271,7 +314,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t0GZTXYeeuaj"
+        "id": "t0GZTXYeeuaj",
+        "outputId": "bb28958f-1373-4284-c237-a30aa3e9457b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sorted_nums = list(range(1000))\n",
@@ -296,6 +343,26 @@
         "\n",
         "print('選択ソート（最大，平均） ', max1, c1/t)\n",
         "print('クイックソート（最大，平均） ', max2, c2/t)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "選択ソート（最大，平均）  499500 499500.0\n",
+            "クイックソート（最大，平均）  13233 10932.31\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y-VypC5ekgvY"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
